--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 	<h1>test github</h1>
 	<h2>добавил файл для проверки</h2>
 	<h3>попробовал еще раз внести изменения</h3>
+	<img src="img/2017-10-01_12-28-12.png" alt="img">
 </body>
 </html>
