--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 	<h2>добавил файл для проверки</h2>
 	<h3>попробовал еще раз внести изменения</h3>
 	<img src="img/2017-10-01_12-28-12.png" alt="img">
+	<h1>еще одно изменение после урока,для проверки своиз знаний</h1>
 </body>
 </html>
